<resources>
    <string name="app_name">KnownReader</string>
    <string name="app_name_fork" translatable="false">KnownReader</string>
    <string name="app_name_premium" translatable="false">KnownReader premium</string>
    <string name="app_name_onyx" translatable="false">KnownReader Onyx</string>
    <string name="app_name_free" translatable="false">KnownReader free</string>
    <string name="app_name_exp" translatable="false">KR Exp</string>
    <string name="app_name_fdroid" translatable="false">KnownReader</string>
    <string name="mi_search">Search</string>
    <string name="mi_search_web">Search on web</string>
    <string name="mi_citation">Save citation</string>
    <string name="mi_user_dic">Save to user dictionary</string>
    <string name="mi_exit">Exit</string>
    <string name="mi_hide">Hide</string>
    <string name="mi_goto">Go to</string>
    <string name="mi_bookmarks">Bookmarks</string>
    <string name="mi_file_open">Open file</string>
    <string name="mi_options">Options</string>
    <string name="mi_font_size_increase">Increase font size </string>
    <string name="mi_font_size_decrease">Decrease font size</string>
    <string name="mi_font_select">Select font face</string>
    <string name="mi_font_bold">Font embolden</string>
    <string name="mi_font_previous">Previous font</string>
    <string name="mi_font_next">Next font</string>
    <string name="progress_please_wait">Please wait</string>
    <string name="progress_starting_cool_reader">Starting KnownReader</string>
    <string name="progress_loading">Loading document</string>
    <string name="progress_formatting">Formatting document</string>
    <string name="progress_scanning">Scanning folder</string>
    <string name="context_menu_title_bookmark">Bookmark</string>
    <string name="context_menu_title_book">Book</string>
    <string name="context_menu_title_recent_book">Recent book</string>
    <string name="context_menu_title_folder">Folder</string>
    <string name="mi_book_open">Open book</string>
    <string name="mi_book_info">Book info</string>
    <string name="mi_book_edit">Edit book info</string>
    <string name="mi_book_delete">Delete book file</string>
    <string name="mi_book_set_custom_cover">Set custom cover</string>
    <string name="mi_book_delete_custom_cover">Delete custom cover</string>
    <string name="mi_book_shortcut">Create book shortcut</string>
    <string name="mi_book_to_cloud">Save book to cloud storage</string>
    <string name="mi_book_to_email">Send book by email</string>
    <string name="mi_book_no_mark">Set no mark</string>
    <string name="mi_book_to_read">Set \"to read\" mark</string>
    <string name="mi_book_reading">Set \"reading\" mark</string>
    <string name="mi_book_finished">Set \"finished\" mark</string>
    <string name="mi_book_rate_5">Rate 5 stars</string>
    <string name="mi_book_rate_4">Rate 4 stars</string>
    <string name="mi_book_rate_3">Rate 3 stars</string>
    <string name="mi_book_rate_2">Rate 2 stars</string>
    <string name="mi_book_rate_1">Rate 1 stars</string>
    <string name="mi_book_rate_0">Rate no stars</string>
    <string name="mi_book_recent_books">Recent books</string>
    <string name="mi_book_file_remove">Delete book file</string>
    <string name="mi_book_recent_remove">Remove from list</string>
    <string name="mi_book_recent_goto">Go to directory</string>
    <string name="mi_book_sort_order">Sorting order</string>
    <string name="mi_book_sort_order_filename">By filename</string>
    <string name="mi_book_sort_order_filename_desc">By filename (desc)</string>
    <string name="mi_book_sort_order_timestamp">By timestamp</string>
    <string name="mi_book_sort_order_timestamp_desc">By timestamp (desc)</string>
    <string name="mi_book_sort_order_author">By author</string>
    <string name="mi_book_sort_order_author_desc">By author (desc)</string>
    <string name="mi_book_sort_order_series">By series</string>
    <string name="mi_book_sort_order_series_desc">By series (desc)</string>
    <string name="mi_book_sort_order_title">By title</string>
    <string name="mi_book_sort_order_title_desc">By title (desc)</string>
    <string name="toggle_dict_once">Toggle dictionary (once)</string>
    <string name="toggle_dict_once_short">Toggle dic (once)</string>
    <string name="toggle_dict">Toggle dictionary</string>
    <string name="toggle_dict_short">Toggle dic</string>
    <string name="mi_bookmark_set">Set bookmark</string>
    <string name="mi_bookmark_goto">Go to bookmark</string>
    <string name="mi_goto_page">Go to page</string>
    <string name="mi_goto_percent">Go to position %</string>
    <string name="mi_goto_value">Go to value</string>
    <string name="mi_filter_option">Find in options</string>
    <string name="mi_no_options">No options found for:</string>
    <string name="mi_goto_toc">Table of Contents</string>
    <string name="mi_folder_open">Open folder</string>
    <string name="mi_folder_to_favorites">Add to favorites</string>
    <string name="mi_folder_fav_left">Move left</string>
    <string name="mi_folder_fav_right">Move right</string>
    <string name="mi_folder_fav_remove">Remove</string>
    <string name="mi_folder_delete">Delete…</string>
    <string name="dir_recent_books">Recent Books</string>
    <string name="dir_sd_card">SD Card</string>
    <string name="dir_internal_sd_card">Internal SD Card</string>
    <string name="dir_internal_memory">Internal memory</string>
    <string name="win_title_bookmarks">Bookmarks</string>
    <string name="win_title_bookmarks_choose">Choose bookmark</string>
    <string name="win_title_dicts">Dictionaries</string>
    <string name="win_title_toc">Table of Contents</string>
    <string name="win_title_options">Options</string>
    <string name="win_title_search">Search</string>
    <string name="win_title_options_apply">Apply changes?</string>
    <string name="win_title_screen_orientation_change_apply">Apply screen orientation change?</string>
    <string name="win_title_log">Log</string>
    <string name="tab_options_styles">Styles</string>
    <string name="tab_options_page">Page</string>
    <string name="tab_options_app">App</string>
    <string name="tab_options_controls">Controls</string>
    <string name="tab_options_css">CSS</string>
    <string name="tab_options_clouds">Clouds</string>
    <string name="options_font_size">Font size</string>
    <string name="options_font_size_user_dic">User dic panel\"s font size</string>
    <string name="options_font_face">Font face</string>
    <string name="options_font_weight">Font weight</string>
    <string name="options_font_embolden">Embolden font</string>
    <string name="options_font_fine_embolden">Character weight koef</string>
    <string name="options_font_embolden_alg">Font embolden algorithm</string>
    <string name="options_font_embolden_alg0">Default</string>
    <string name="options_font_embolden_alg1">Freetype embolden API</string>
    <string name="options_font_italicize">Italicize font (algorithmic)</string>
    <string name="options_trim_initial_par_spaces">Trim initial paragraph spaces</string>
    <string name="options_trim_initial_par_spaces_add_info">Some book\'s formatting include extra spaces (or non-breaking spaces) in the beginnings of paragraph - this is workaround for this</string>
    <string name="options_font_antialias">Font antialiasing</string>
    <string name="options_font_antialias_off">No antialias</string>
    <string name="options_font_antialias_on_for_big">On for big fonts (shades of gray)</string>
    <string name="options_font_antialias_on_for_all">On for all fonts (shades of gray)</string>
    <string name="options_font_antialias_lcd_rgb">LCD (RGB)</string>
    <string name="options_font_antialias_lcd_bgr">LCD (BGR)</string>
    <string name="options_font_antialias_lcd_v_rgb">LCD_V (RGB)</string>
    <string name="options_font_antialias_lcd_v_bgr">LCD_V (BGR)</string>
    <string name="options_interline_space">Interline space</string>
    <string name="options_inverse_view">Night mode</string>
    <string name="options_color_text">Text color</string>
    <string name="options_color_background">Background color</string>
    <string name="dlg_search_hint">Type text here</string>
    <string name="options_app_tapzones_normal">Tap zone actions</string>
    <string name="options_app_key_actions">Key actions</string>
    <string name="mi_bookmark_add">Add</string>
    <string name="mi_bookmark_delete">Delete</string>
    <string name="mi_bookmark_delete_all">Delete all</string>
    <string name="mi_bookmark_edit">Edit</string>
    <string name="mi_bookmark_export">Export bookmarks</string>
    <string name="dlg_book_search_title">Title</string>
    <string name="dlg_book_search_series">Series</string>
    <string name="dlg_book_search_filename">Filename</string>
    <string name="dlg_book_search_author">Author</string>
    <string name="dlg_book_search_prompt">Enter search pattern:</string>
    <string name="dlg_book_search_terms">Search text:</string>
    <string name="dlg_about_ini_location">Settings file:</string>
    <string name="dlg_about_db_location">Database file:</string>
    <string name="dlg_about_fonts_dirs">Fonts directories:</string>
    <string name="dlg_about_textures_dirs">Textures directories:</string>
    <string name="dlg_about_backgrounds_dirs">Backgrounds directories:</string>
    <string name="dlg_about_hyphenations_dirs">Hyphenation dictionaries directories:</string>
    <string name="dlg_about_offlinedicts_dirs">Offline dictionaries directories:</string>
    <string name="dlg_about_customcovers_dirs">Custom book covers directories:</string>
    <string name="dlg_about_bookmarks_dirs">Saved bookmarks directories:</string>
    <string name="dlg_about_download_dirs">Download directories:</string>
    <string name="dlg_about_cloudsync_dirs">Cloud sync directories:</string>
    <string name="dlg_about_icons_dirs">Icons directories:</string>
    <string name="mi_bookmark_send">Send</string>
    <string name="folder_name_books_by_rating">By Rating</string>
    <string name="folder_name_books_by_state">By state</string>
    <string name="folder_name_books_by_publyear">Publish year</string>
    <string name="folder_name_books_by_filedate">File date</string>
    <string name="book_state_toread">To read</string>
    <string name="book_state_reading">Reading</string>
    <string name="book_state_none">No mark</string>
    <string name="book_state_finished">Finished</string>
    <string name="options_view_toolbar_position">Toolbar position</string>
    <string name="view_toolbar_position_change">Change toolbar position</string>
    <string name="options_view_toolbar_hide_in_fullscreen">Hide toolbar in fullscreen mode</string>
    <string name="options_view_toolbar_appearance">Toolbar appearance</string>
    <string name="save_bookmarks_to_cloud_short">Bookmarks to cloud</string>
    <string name="load_bookmarks_from_cloud_short">Bookmarks from cloud</string>
    <string name="options_reader_toolbar_buttons">Reader toolbar, menu and group\'s buttons</string>
    <string name="mi_folder_series_authors">All series\" authors</string>
    <string name="show_group_books_by_author">Group by authors</string>
    <string name="show_group_books_by_series">Group by series</string>
    <string name="show_group_books_by_genre">Group by genres</string>
    <string name="show_group_books_by_tag">Group by tags</string>
    <string name="show_group_books_by_bookdate">Group by book date</string>
    <string name="show_group_books_by_docdate">Group by doc date</string>
    <string name="show_group_books_by_publyear">Group by publication year</string>
    <string name="show_group_books_by_filedate">Group by file date</string>
    <string name="show_group_books_by_rating">Group by rating</string>
    <string name="show_group_books_by_state">Group by state</string>
    <string name="show_group_books_by_title">Group by titles</string>
</resources>