<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <TextView android:text="@string/dlg_about_ini_location"
                android:id="@+id/ini_location_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="ini_location"
                android:id="@+id/ini_location"
                android:textColor="?attr/colorIcon"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_db_location"
                android:id="@+id/db_location_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="db_location"
                android:id="@+id/db_location"
                android:textColor="?attr/colorIcon"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_fonts_dirs"
                  android:id="@+id/fonts_dirs_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="fonts_dir"
                  android:id="@+id/fonts_dirs"
                  android:textColor="?attr/colorIcon"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_textures_dirs"
                  android:id="@+id/textures_dir_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="textures_dir"
                  android:textColor="?attr/colorIcon"
                  android:id="@+id/textures_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_backgrounds_dirs"
                  android:id="@+id/backgrounds_dir_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="backgrounds_dir"
                  android:textColor="?attr/colorIcon"
                  android:id="@+id/backgrounds_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_hyphenations_dirs"
                  android:id="@+id/hyphenations_dir_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="hyph_dir"
                  android:textColor="?attr/colorIcon"
                  android:id="@+id/hyph_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_offlinedicts_dirs"
                android:id="@+id/offline_dir_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="offline_dir"
                android:textColor="?attr/colorIcon"
                android:id="@+id/offline_dirs"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_customcovers_dirs"
                android:id="@+id/customcovers_dir_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="customcovers_dir"
                android:textColor="?attr/colorIcon"
                android:id="@+id/customcovers_dirs"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_download_dirs"
                android:id="@+id/download_dir_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="download_dir"
                android:textColor="?attr/colorIcon"
                android:id="@+id/download_dirs"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_cloudsync_dirs"
                android:id="@+id/cloudsync_dir_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="cloudsync_dir"
                android:textColor="?attr/colorIcon"
                android:id="@+id/cloudsync_dirs"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_icons_dirs"
                android:id="@+id/icons_dir_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="icons_dir"
                android:textColor="?attr/colorIcon"
                android:id="@+id/icons_dirs"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_bookmarks_dirs"
                android:id="@+id/bookmarks_dir_header"
                style="@style/TextAppearance.Large"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="bookmarks_dir"
                android:textColor="?attr/colorIcon"
                android:id="@+id/bookmarks_dirs"
                style="@style/TextAppearance.Small"
                android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
