<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:layout_marginLeft="4dip"
  android:layout_marginRight="4dip"
  android:stretchColumns="1"
>
     <TextView
       android:id="@+id/search_status"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:textColor="?attr/colorIcon"
       style="@style/TextAppearance.Small"
       android:text="@string/dlg_book_search_prompt"
       android:layout_marginLeft="4dip"
       android:layout_marginRight="4dip"
     />
    <TableRow>
        <TextView
          android:textColor="?attr/colorIcon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/TextAppearance.Small"
          android:text="@string/dlg_book_search_terms"
          android:layout_marginLeft="4dip"
          android:layout_marginRight="4dip"
        />
        <EditText
          android:id="@+id/search_text_terms"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text=""
          android:layout_marginLeft="4dip"
          android:layout_marginRight="4dip"
          style="@style/TextAppearance.Widget.EditText"
          android:editable="true" android:hint="@string/dlg_search_hint" android:singleLine="true"
        />
    </TableRow>
</TableLayout>
